.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcs-kubernetes-project
spec:
  replicas: 2
  #в случае фейла (например при обновлении) спустя заданное время убьет процесс и откатится к стабильному состоянию
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: mcs-kubernetes-project
  template:
    metadata:
      labels:
        app: mcs-kubernetes-project
    spec:
      imagePullSecrets:
        - name: mcs-kubernetes-project-image-pull
      containers:
        - name: mcs-kubernetes-project
          #подставляется актуальный образ из пайплайна
          image: <IMAGE>
          #переменные базы, заполняем руками, после создания инстанса
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            initialDelaySeconds: 10
