.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcs-kubernetes-project
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      # todo отредактировать с указанием хоста и сервисов (/user, /item etc)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mcs-kubernetes-project
            port:
              name: http
